--- a/style.css
+++ b/style.css
@@ -146,12 +146,12 @@ article>h2{
     font-weight: bold;
     line-height: 1.1;
     margin-bottom: 40px;
-    margin-left: 49px;
+    margin-left: 25px;
     color: #4f4e4e;
 }
 article>p{
     margin-bottom: 20px;
-    margin-left: 49px;
+    margin-left: 25px;
     line-height: 1.3;
 }
 a.more{
@@ -200,9 +200,62 @@ aside{
     font-size: 0.75em;
     width: 100%;
     border: 1px solid #b9b9b9;
-    padding: 15px 20px;
+    padding: 15px 50px 15px 20px;
     box-sizing: border-box;
-    
+    position: absolute;
+    top: 0;
+    left: 0;
 }
+.subscribe{
+    position: relative;
+    width: 100%;
+    height: 48px;
+}
+.subscribe_image{
+    position: absolute;
+    right: 20px;
+    top: 12px;
+}
+.widget_photo>h2{
+    background: none;
+    border: none;
+    padding-left: 0;
+}
+.pager{
+    border-top: 1px solid #e1e0e0;
+    font-size: 1.125em;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 30px;
+}
+.pager a{
+    color: #818181;
+    text-decoration: none;
+}
+.pager a:hover{
+color: #339933;
+text-decoration: underline;
+}
+.previous_link{
+    float: left;
+}
+.next_link{
+    float: right;
+}
+footer{
+    background-color: #f8f8f8;
+    border-top: 1px solid #e1e0e0;
+    text-align: center;
+}
+footer>.center_block_main_main>p{
+    font-size: 0.8125em;
+    color: #d2d2d2;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+footer img{
+    padding-top: 40px;
+}
+
 
 
